--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@monorepo/lit-component",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "build": "rimraf dist && rollup -c",
     "storybook": "storybook dev -p 6006",
@@ -23,7 +24,7 @@
     "@storybook/web-components-vite": "^7.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^4.9.5",
+    "rollup": "^4.9.6",
     "storybook": "^7.6.10",
     "typescript": "^5.3.3"
   }
